--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,25 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Blog{% endblock %}</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        h2 {
-            color: #333;
-        }
-        a {
-            text-decoration: none;
-        }
-    </style>
+    
+    <!-- Menambahkan Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="{% static 'styles/global.css' %}">
 </head>
 <body>
+    {% include 'navbar.html' %}
     {% block content %}
     {% endblock %}
 </body>
