fix: admin navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
         <div class="flex items-center space-x-4">
           {% if user.role == 'admin' %}
             <a href="{% url 'admin_dashboard' %}" class="nav-link">Home</a>
-            <a href="{% url 'admin_categories' %}" class="nav-link">Categories</a>
+            <a href="{% url 'admin_dashboard' %}" class="nav-link">Categories</a>
             <a href="{% url 'customer_blog' %}" class="nav-link">Blog</a>
           {% elif user.role == 'customer' %}
             <a href="{% url 'customer_dashboard' %}" class="nav-link">Home</a>
